--- a/README
+++ b/README
@@ -19,4 +19,4 @@ La raiz contiene dos directorios:
 - software contiene la aplicación desarrollada con JUCE 7.0.5.
 - samples contiene muestras de audio grabadas en Ableton Live
 
-![alt text](https://github.com/rarepa/fpga_project/blob/main/screenshot.png?raw=true)
+![Application](screenshot.png)
